--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "social networking site",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "serve": "nodemon server.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently --kill-others-on-fail \"npm run serve\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -15,17 +17,28 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/ashwinichechar/mern-stack#readme",
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "axios": "^0.19.0",
+    "bcrypt": "^3.0.7",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.4",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.7",
-    "nodemon": "^1.19.4",
+    "react-moment": "^0.9.6",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
+  },
+  "devDependencies": {
+    "concurrently": "^5.0.0",
+    "nodemon": "^1.19.4"
   }
 }
