--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server",
     "serve": "nodemon server.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently --kill-others-on-fail \"npm run serve\" \"npm run client\""
+    "dev": "concurrently --kill-others-on-fail \"npm run serve\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
